Fix horizontal site card overflow

--- a/src/css/layout/sites.css
+++ b/src/css/layout/sites.css
@@ -2,6 +2,9 @@
   display: grid;
   gap: 1.5rem;
 
+  // prevent cells to grow over the grid container limits: https://github.com/meduzen/canwe/issues/174
+  grid-template-columns: 100%;
+
   @media (--tablet-7) {
     grid-template-columns: repeat(2, minmax(0, 1fr));
     gap: 2rem;
